FIX: Dashboard Card Spacings

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -194,7 +194,7 @@
   justify-content: center;
 }
 
-.dashboard-card {
+.home-dashboard-card {
   width: 100%;
   max-width: 660px;
   min-height: 500px;
